client: update to OkHttp 5
Also switch from legacy mockwebserver to mockwebserver3. This gets rid
of the Junit 4 dependency, which is why hamcrest has to be depended on
explicitly wherever it is used.